# seigi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: deploy-demo.yaml
demo/: .gitignore  CHANGELOG.md  Cargo.toml  Interoper.toml  Trunk.toml  bacon.toml  build.rs  cliff.toml  index.html
demo/.cargo/: config.toml
demo/src/: main.rs  router.rs
demo/src/focus/: mod.rs
demo/src/form/: mod.rs
demo/src/toast/: mod.rs
demo/styles/src/: forms.css  index.css  router.css
seigi_components/: Cargo.toml  README.md
seigi_components/src/: construct.js  elements.rs  lib.rs
seigi_focus/: CHANGELOG.md  Cargo.toml  cliff.toml
seigi_focus/src/: candidates.rs  lib.rs
seigi_form/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
seigi_form/src/: lib.rs
seigi_form/src/multi_stage/: mod.rs
seigi_toast/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
seigi_toast/src/: lib.rs  renderer.rs  state.rs  styles.css  toast.rs  toaster.rs
src/: lib.rs
tools/: README.md  generate_changelogs.rs
