[package]
name = "seigi"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Fundamental web UI components written in Rust"
homepage = "https://github.com/kappa8719/seigi"
repository = "https://github.com/kappa8719/seigi"


[workspace]
members = ["seigi_*"]

[workspace.dependencies]
seigi_toast = { path = "seigi_toast", version = "0.2.0" }
seigi_focus = { path = "seigi_focus", version = "0.1.0" }
js-sys = "0.3"
wasm-bindgen = "0.2"
gloo = "0.11.0"

[workspace.dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Window",
  "PopStateEvent",
  "HtmlAnchorElement",
  "NodeList",
  "CssStyleDeclaration",
  "ViewTransition",
  "HtmlStyleElement",
  "Text",
  "ResizeObserver",
  "TouchEvent",
  "MouseEvent",
  "FocusEvent",
  "KeyboardEvent"
]

[dependencies]
seigi_toast.workspace = true
seigi_focus.workspace = true
