[package]
name = "seigi"
version = "0.3.0"
edition = "2024"
description = "Fundamental web UI components written in Rust"
homepage = "https://github.com/kappa8719/seigi"
repository = "https://github.com/kappa8719/seigi"
license = "MIT"

[workspace]
members = ["seigi_*"]

[workspace.dependencies]
seigi_toast = { path = "seigi_toast", version = "0.2.1" }
seigi_focus = { path = "seigi_focus", version = "0.3.0" }
seigi_form = { path = "seigi_form", versin = "0.3.0" }
js-sys = "0.3"
wasm-bindgen = "0.2"
gloo = "0.11.0"

[workspace.dependencies.web-sys]
version = "0.3"
features = [
  "CssStyleDeclaration",
  "Document",
  "FocusEvent",
  "HtmlAnchorElement",
  "HtmlStyleElement",
  "KeyboardEvent",
  "MouseEvent",
  "NodeList",
  "PopStateEvent",
  "ResizeObserver",
  "Text",
  "TouchEvent",
  "ViewTransition",
  "Window",
]

[dependencies]
seigi_focus.workspace = true
seigi_form.workspace = true
seigi_toast.workspace = true
