[package]
name = "seigi"
version = "0.3.0"
edition = "2024"
description = "Fundamental web UI components written in Rust"
homepage = "https://github.com/kappa8719/seigi"
repository = "https://github.com/kappa8719/seigi"
license = "MIT"

[workspace]
members = ["seigi_*"]

[workspace.dependencies]
seigi_components = { path = "seigi_components", version = "0.1.0" }
seigi_focus = { path = "seigi_focus", version = "0.3.0" }
seigi_form = { path = "seigi_form", version = "0.3.0" }
seigi_toast = { path = "seigi_toast", version = "0.2.1" }
gloo = "0.11.0"
js-sys = "0.3"
wasm-bindgen = "0.2"

[workspace.dependencies.web-sys]
version = "0.3"
features = [
  "CssStyleDeclaration",
  "Document",
  "FocusEvent",
  "KeyboardEvent",
  "MouseEvent",
  "NodeList",
  "PopStateEvent",
  "ResizeObserver",
  "Text",
  "TouchEvent",
  "ViewTransition",
  "Window",
  "CustomElementRegistry",
  "ShadowRoot",
  "ShadowRootInit",
  "ShadowRootMode",

  # Elements
  "HtmlAnchorElement",
  "HtmlAreaElement",
  "HtmlAudioElement",
  "HtmlBaseElement",
  "HtmlBodyElement",
  "HtmlBrElement",
  "HtmlButtonElement",
  "HtmlCanvasElement",
  "HtmlDListElement",
  "HtmlDataElement",
  "HtmlDataListElement",
  "HtmlDetailsElement",
  "HtmlDialogElement",
  "HtmlDirectoryElement",
  "HtmlDivElement",
  "HtmlElement",
  "HtmlEmbedElement",
  "HtmlFieldSetElement",
  "HtmlFontElement",
  "HtmlFormElement",
  "HtmlFrameElement",
  "HtmlFrameSetElement",
  "HtmlHeadElement",
  "HtmlHeadingElement",
  "HtmlHrElement",
  "HtmlHtmlElement",
  "HtmlIFrameElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlLabelElement",
  "HtmlLegendElement",
  "HtmlLiElement",
  "HtmlLinkElement",
  "HtmlMapElement",
  "HtmlMediaElement",
  "HtmlMenuElement",
  "HtmlMetaElement",
  "HtmlMeterElement",
  "HtmlModElement",
  "HtmlOListElement",
  "HtmlObjectElement",
  "HtmlOptGroupElement",
  "HtmlOptionElement",
  "HtmlOutputElement",
  "HtmlParagraphElement",
  "HtmlParamElement",
  "HtmlPictureElement",
  "HtmlPreElement",
  "HtmlProgressElement",
  "HtmlQuoteElement",
  "HtmlScriptElement",
  "HtmlSelectElement",
  "HtmlSlotElement",
  "HtmlSourceElement",
  "HtmlSpanElement",
  "HtmlStyleElement",
  "HtmlTableCaptionElement",
  "HtmlTableCellElement",
  "HtmlTableColElement",
  "HtmlTableElement",
  "HtmlTableRowElement",
  "HtmlTableSectionElement",
  "HtmlTemplateElement",
  "HtmlTextAreaElement",
  "HtmlTimeElement",
  "HtmlTitleElement",
  "HtmlTrackElement",
  "HtmlUListElement",
  "HtmlUnknownElement",
  "HtmlVideoElement",
]

[dependencies]
seigi_components.workspace = true
seigi_focus.workspace = true
seigi_form.workspace = true
seigi_toast.workspace = true
