[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window", "PopStateEvent", "HtmlAnchorElement", "NodeList", "CssStyleDeclaration", "ViewTransition"] }
gloo = "0.11.0"
anyhow = "1"
console_error_panic_hook = "0.1.7"

[build-dependencies]
interoper = "0.1.3"
