[package]
name = "demo"
version = "0.2.0"
edition = "2024"

[workspace]

[dependencies]
seigi = { path = "../" }
wasm-bindgen = "0.2.104"
js-sys = "0.3.81"
web-sys = { version = "0.3", features = ["Document", "Window", "PopStateEvent", "HtmlAnchorElement", "NodeList", "CssStyleDeclaration", "ViewTransition", "HtmlStyleElement", "Text", "ResizeObserver"] }
gloo = "0.11.0"
anyhow = "1"
console_error_panic_hook = "0.1.7"

[build-dependencies]
interoper = "0.1.3"
