[package]
name = "seigi_form"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Extensible form library"
homepage = "https://github.com/kappa8719/seigi/seigi_form"
repository = "https://github.com/kappa8719/seigi"

[dependencies]
seigi_focus.workspace = true
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
gloo.workspace = true
