[package]
name = "seigi_form"
version = "0.3.0"
edition = "2024"
description = "Extensible form library"
homepage = "https://github.com/kappa8719/seigi/seigi_form"
repository = "https://github.com/kappa8719/seigi"
license = "MIT"

[dependencies]
gloo.workspace = true
js-sys.workspace = true
seigi_focus.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
