[package]
name = "seigi_toast"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Unstyled toast components for web"
homepage = "https://github.com/kappa8719/seigi/seigi_toast"
repository = "https://github.com/kappa8719/seigi"

[dependencies]
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
gloo.workspace = true
parking_lot = { version = "0.12.5", features = ["nightly"] }
