[package]
name = "seigi_toast"
version = "0.2.1"
edition = "2024"
description = "Unstyled toast components for web"
homepage = "https://github.com/kappa8719/seigi/seigi_toast"
repository = "https://github.com/kappa8719/seigi"
license = "MIT"

[dependencies]
wasm-bindgen.workspace = true
web-sys.workspace = true
js-sys.workspace = true
gloo.workspace = true
parking_lot = { version = "0.12.5", features = ["nightly"] }
